--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -40,9 +40,9 @@ name: .NET Core Desktop
 
 on:
   push:
-    branches: '**'
+    branches: ['**']
   pull_request:
-    branches: '**'
+    branches: ['**']
 
 jobs:
 
