--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -83,6 +83,13 @@ jobs:
 
     - name: Execute unit tests
       run: dotnet test $env:Test_Project_Path --configuration ${{ matrix.configuration }} --no-build -p:TreatWarningsAsErrors=false
+      
+    - name: Publish Test Results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: test-results
+        path: '**/TestResults/*.trx'
         
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
